auth volledig af( getest in frontend) mijn wenslijsten ophalen/nieuwe maken af(getest frontend) todo : -wenslijsten wijzigen/verwijderen testen - operaties op wensen - operaties op wenscategorieen - operaties op deelnemer van wenslijst

--- a/wishListClient/Login.xaml
+++ b/wishListClient/Login.xaml
@@ -12,11 +12,11 @@
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Email: "></TextBlock>
-                <TextBox/>
+                <TextBox x:Name="email"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="PW: "></TextBlock>
-                <TextBox/>
+                <TextBox x:Name="pw"/>
             </StackPanel>
             <Button Click="Button_Click" Content="Aanmelden"/>
         </StackPanel>
