--- a/wishListClient/MijnLijsten.xaml
+++ b/wishListClient/MijnLijsten.xaml
@@ -11,14 +11,18 @@
         <ListView x:Name="lv">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel>
+                    <StackPanel  Orientation="Horizontal">
 
-                        <TextBlock x:Name="naam" Text="{Binding Name}"/>
-
+                        <TextBlock x:Name="naam" Text="{Binding Name}" Margin="1,0,10,0"/>
+                        <Button Content="Verwijderen" Click="DeleteWishList" Margin="1,0,10,0"></Button>
+                        <Button Content="Wijzig" Click="EditWishList" Margin="1,0,10,0"></Button>
+                        <Button Content="Detail van deze wenslijst" Click="ShowWishList" Margin="5,0,1,0"></Button>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
+            
         </ListView>
-        <Button Content="Wenslijst maken" Click="MakeNewList"></Button>
+        <Button Content="Wenslijst maken" Click="MakeNewList" Margin="10,20,0,0"></Button>
+        
     </StackPanel>
 </Page>
